Switch GC to ConcMarkSweep and add other options from IDEA defaults